####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = librobots.a

INCLUDES = $(all_includes)

librobots_a_METASOURCES = AUTO

librobots_a_SOURCES = human.cpp mafanja.cpp smoothb3.cpp jpp.cpp k1999v12.cpp jocosa83.cpp felix16.cpp tutorial4.cpp tutorial3.cpp tutorial2.cpp tutorial1.cpp wappucar.cpp viper2hc.cpp viper2c.cpp vector.cpp turtle5.cpp stocker.cpp sparky5.cpp sarahnc1.cpp sad01_1.cpp rusty.cpp ralph2a.cpp ralph2.cpp rach221b.cpp pokey02b.cpp oscarstr.cpp oscar1.cpp mat1.cpp magic.cpp lisa15.cpp jas.cpp jammer.cpp gumby01b.cpp grymb1.cpp gryma1.cpp eagle03.cpp douge1.cpp dodger6.cpp djoefe.cpp dgn.cpp burns.cpp bulle2.cpp bulle.cpp bug.cpp apex84.cpp apex1.cpp 

SUBDIRS = bulle 

EXTRA_DIST = apex1.cpp apex84.cpp bug.cpp bulle.cpp bulle2.cpp burns.cpp dgn.cpp djoefe.cpp dodger6.cpp douge1.cpp eagle03.cpp gryma1.cpp grymb1.cpp gumby01b.cpp jammer.cpp jas.cpp lisa15.cpp magic.cpp mat1.cpp oscar1.cpp oscarstr.cpp pokey02b.cpp rach221b.cpp ralph2.cpp ralph2a.cpp rusty.cpp sad01_1.cpp sarahnc1.cpp sparky5.cpp stocker.cpp turtle5.cpp vector.cpp viper2c.cpp viper2hc.cpp wappucar.cpp tutorial1.cpp tutorial2.cpp tutorial3.cpp tutorial4.cpp felix16.cpp jocosa83.cpp bulle.dat bulle2.dat djoefe.opt k1999v12.cpp jpp.cpp smoothb3.cpp mafanja.cpp human.cpp 

install-data-local:
	$(mkinstalldirs) /usr/share/rars/robots/
	$(INSTALL_DATA) $(srcdir)/bulle.dat /usr/share/rars/robots/bulle.dat
	$(mkinstalldirs) /usr/share/rars/robots/
	$(INSTALL_DATA) $(srcdir)/bulle2.dat /usr/share/rars/robots/bulle2.dat
	$(mkinstalldirs) /usr/share/rars/robots/
	$(INSTALL_DATA) $(srcdir)/djoefe.opt /usr/share/rars/robots/djoefe.opt

uninstall-local:
	-rm -f /usr/share/rars/robots/bulle.dat
	-rm -f /usr/share/rars/robots/bulle2.dat
	-rm -f /usr/share/rars/robots/djoefe.opt

####### kdevelop will overwrite this part!!! (end)############
