####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libxml.a

INCLUDES = $(all_includes)

libxml_a_METASOURCES = AUTO

libxml_a_SOURCES = xmlparse.c xmltok.c xmlrole.c 


EXTRA_DIST = ascii.h asciitab.h xmlrole.c xmltok.c xmlrole.h xmlparse.c xmlparse.h xmltok.h xmltok_impl.h xmldef.h utf8tab.h nametab.h latin1tab.h iasciitab.h 

####### kdevelop will overwrite this part!!! (end)############
