####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = color.pl0 car_black_black.pcx car_blue_blue.pcx car_gray_gray.pcx car_gray_green.pcx car_green_green.pcx car_green_red.pcx car_lblue_blue.pcx car_lgreen_lred.pcx car_lred_lred.pcx car_orange_orange.pcx car_pink_pink.pcx car_red_black.pcx car_red_red.pcx car_red_yellow.pcx car_white_black.pcx car_white_red.pcx car_white_white.pcx car_yellow_black.pcx car_yellow_yellow.pcx font8x8.pcx grass8x8.pcx pitstop.tga red_brick.tga road.tga road2.tga sky.tga tex1.tga grass.tga 

install-data-local:
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/color.pl0 /usr/share/rars/bitmap/color.pl0
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_black_black.pcx /usr/share/rars/bitmap/car_black_black.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_blue_blue.pcx /usr/share/rars/bitmap/car_blue_blue.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_gray_gray.pcx /usr/share/rars/bitmap/car_gray_gray.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_gray_green.pcx /usr/share/rars/bitmap/car_gray_green.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_green_green.pcx /usr/share/rars/bitmap/car_green_green.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_green_red.pcx /usr/share/rars/bitmap/car_green_red.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_lblue_blue.pcx /usr/share/rars/bitmap/car_lblue_blue.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_lgreen_lred.pcx /usr/share/rars/bitmap/car_lgreen_lred.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_lred_lred.pcx /usr/share/rars/bitmap/car_lred_lred.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_orange_orange.pcx /usr/share/rars/bitmap/car_orange_orange.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_pink_pink.pcx /usr/share/rars/bitmap/car_pink_pink.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_red_black.pcx /usr/share/rars/bitmap/car_red_black.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_red_red.pcx /usr/share/rars/bitmap/car_red_red.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_red_yellow.pcx /usr/share/rars/bitmap/car_red_yellow.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_white_black.pcx /usr/share/rars/bitmap/car_white_black.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_white_red.pcx /usr/share/rars/bitmap/car_white_red.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_white_white.pcx /usr/share/rars/bitmap/car_white_white.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_yellow_black.pcx /usr/share/rars/bitmap/car_yellow_black.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/car_yellow_yellow.pcx /usr/share/rars/bitmap/car_yellow_yellow.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/font8x8.pcx /usr/share/rars/bitmap/font8x8.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/grass8x8.pcx /usr/share/rars/bitmap/grass8x8.pcx
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/pitstop.tga /usr/share/rars/bitmap/pitstop.tga
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/red_brick.tga /usr/share/rars/bitmap/red_brick.tga
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/road.tga /usr/share/rars/bitmap/road.tga
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/road2.tga /usr/share/rars/bitmap/road2.tga
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/sky.tga /usr/share/rars/bitmap/sky.tga
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/tex1.tga /usr/share/rars/bitmap/tex1.tga
	$(mkinstalldirs) /usr/share/rars/bitmap/
	$(INSTALL_DATA) $(srcdir)/grass.tga /usr/share/rars/bitmap/grass.tga

uninstall-local:
	-rm -f /usr/share/rars/bitmap/color.pl0
	-rm -f /usr/share/rars/bitmap/car_black_black.pcx
	-rm -f /usr/share/rars/bitmap/car_blue_blue.pcx
	-rm -f /usr/share/rars/bitmap/car_gray_gray.pcx
	-rm -f /usr/share/rars/bitmap/car_gray_green.pcx
	-rm -f /usr/share/rars/bitmap/car_green_green.pcx
	-rm -f /usr/share/rars/bitmap/car_green_red.pcx
	-rm -f /usr/share/rars/bitmap/car_lblue_blue.pcx
	-rm -f /usr/share/rars/bitmap/car_lgreen_lred.pcx
	-rm -f /usr/share/rars/bitmap/car_lred_lred.pcx
	-rm -f /usr/share/rars/bitmap/car_orange_orange.pcx
	-rm -f /usr/share/rars/bitmap/car_pink_pink.pcx
	-rm -f /usr/share/rars/bitmap/car_red_black.pcx
	-rm -f /usr/share/rars/bitmap/car_red_red.pcx
	-rm -f /usr/share/rars/bitmap/car_red_yellow.pcx
	-rm -f /usr/share/rars/bitmap/car_white_black.pcx
	-rm -f /usr/share/rars/bitmap/car_white_red.pcx
	-rm -f /usr/share/rars/bitmap/car_white_white.pcx
	-rm -f /usr/share/rars/bitmap/car_yellow_black.pcx
	-rm -f /usr/share/rars/bitmap/car_yellow_yellow.pcx
	-rm -f /usr/share/rars/bitmap/font8x8.pcx
	-rm -f /usr/share/rars/bitmap/grass8x8.pcx
	-rm -f /usr/share/rars/bitmap/pitstop.tga
	-rm -f /usr/share/rars/bitmap/red_brick.tga
	-rm -f /usr/share/rars/bitmap/road.tga
	-rm -f /usr/share/rars/bitmap/road2.tga
	-rm -f /usr/share/rars/bitmap/sky.tga
	-rm -f /usr/share/rars/bitmap/tex1.tga
	-rm -f /usr/share/rars/bitmap/grass.tga

####### kdevelop will overwrite this part!!! (end)############
