####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libgraphics.a

INCLUDES = $(all_includes)

libgraphics_a_METASOURCES = AUTO

libgraphics_a_SOURCES = g_track_area.cpp g_track_bitmap.cpp g_geom.cpp g_tracked.cpp g_track3d.cpp kde_lowgr.cpp g_vmanag.cpp g_viewtl.cpp g_viewcl.cpp g_viewbd.cpp g_view3d.cpp g_view2d.cpp g_view.cpp g_rars_ini.cpp g_palett.cpp g_os.cpp g_opengl.cpp g_main.cpp g_lowgra.cpp g_draw.cpp g_divers.cpp g_bitmap.cpp 


EXTRA_DIST = g_bitmap.cpp g_bitmap.h g_define.h g_divers.cpp g_draw.cpp g_global.h g_lowgra.cpp g_main.cpp g_main.h g_opengl.cpp g_os.cpp g_palett.cpp g_rars_ini.cpp g_rars_ini.h g_view.cpp g_view.h g_view2d.cpp g_view3d.cpp g_viewbd.cpp g_viewcl.cpp g_viewtl.cpp g_vmanag.cpp kde_defi.h kde_lowgr.cpp g_track3d.cpp g_track3d.h g_tracked.cpp g_tracked.h g_geom.cpp g_geom.h g_track_bitmap.cpp g_opengl.h g_track_area.cpp 

####### kdevelop will overwrite this part!!! (end)############
