####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = texture model 

EXTRA_DIST = aalborg.trk adelaide.trk albert.trk albrtprk.trk anew.trk austria.trk barcelon.trk brands.trk brazil.trk buenos.trk clkwis.trk cstlcomb.trk doningtn.trk zandvort.trk dreiw.trk elev2.trk estoril.trk figure8.trk fiorano.trk fourmile.trk hock.trk hungary.trk kevin.trk imola.trk indy500.trk indygp.trk jerez.trk kimla01.trk kimla02.trk kimla03.trk kimla04.trk kimla05.trk longrand.trk loudon.trk magnycrs.trk michigan.trk midohio.trk mlwaukee.trk monaco.trk montreal.trk nurnburg.trk phoenix.trk oval2.trk monza-55.trk monza-76.trk mosport.trk nazareth.trk per1.trk pocono.trk ra.trk ramdu.trk rars.trk s1.trk silver97.trk wierd.trk watglen.trk v03.trk v02.trk s2.trk v01.trk trouble.trk tremblnt.trk sepang.trk season silverst.trk spa.trk speed2.trk stef2.trk suzuka.trk timin.trk random.trk t_eight.trx t_zero.trx 

install-data-local:
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/aalborg.trk /usr/share/rars/tracks/aalborg.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/adelaide.trk /usr/share/rars/tracks/adelaide.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/albert.trk /usr/share/rars/tracks/albert.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/albrtprk.trk /usr/share/rars/tracks/albrtprk.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/anew.trk /usr/share/rars/tracks/anew.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/austria.trk /usr/share/rars/tracks/austria.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/barcelon.trk /usr/share/rars/tracks/barcelon.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/brands.trk /usr/share/rars/tracks/brands.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/brazil.trk /usr/share/rars/tracks/brazil.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/buenos.trk /usr/share/rars/tracks/buenos.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/clkwis.trk /usr/share/rars/tracks/clkwis.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/cstlcomb.trk /usr/share/rars/tracks/cstlcomb.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/doningtn.trk /usr/share/rars/tracks/doningtn.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/zandvort.trk /usr/share/rars/tracks/zandvort.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/dreiw.trk /usr/share/rars/tracks/dreiw.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/elev2.trk /usr/share/rars/tracks/elev2.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/estoril.trk /usr/share/rars/tracks/estoril.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/figure8.trk /usr/share/rars/tracks/figure8.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/fiorano.trk /usr/share/rars/tracks/fiorano.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/fourmile.trk /usr/share/rars/tracks/fourmile.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/hock.trk /usr/share/rars/tracks/hock.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/hungary.trk /usr/share/rars/tracks/hungary.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/kevin.trk /usr/share/rars/tracks/kevin.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/imola.trk /usr/share/rars/tracks/imola.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/indy500.trk /usr/share/rars/tracks/indy500.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/indygp.trk /usr/share/rars/tracks/indygp.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/jerez.trk /usr/share/rars/tracks/jerez.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/kimla01.trk /usr/share/rars/tracks/kimla01.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/kimla02.trk /usr/share/rars/tracks/kimla02.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/kimla03.trk /usr/share/rars/tracks/kimla03.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/kimla04.trk /usr/share/rars/tracks/kimla04.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/kimla05.trk /usr/share/rars/tracks/kimla05.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/longrand.trk /usr/share/rars/tracks/longrand.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/loudon.trk /usr/share/rars/tracks/loudon.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/magnycrs.trk /usr/share/rars/tracks/magnycrs.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/michigan.trk /usr/share/rars/tracks/michigan.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/midohio.trk /usr/share/rars/tracks/midohio.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/mlwaukee.trk /usr/share/rars/tracks/mlwaukee.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/monaco.trk /usr/share/rars/tracks/monaco.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/montreal.trk /usr/share/rars/tracks/montreal.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/nurnburg.trk /usr/share/rars/tracks/nurnburg.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/phoenix.trk /usr/share/rars/tracks/phoenix.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/oval2.trk /usr/share/rars/tracks/oval2.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/monza-55.trk /usr/share/rars/tracks/monza-55.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/monza-76.trk /usr/share/rars/tracks/monza-76.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/mosport.trk /usr/share/rars/tracks/mosport.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/nazareth.trk /usr/share/rars/tracks/nazareth.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/per1.trk /usr/share/rars/tracks/per1.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/pocono.trk /usr/share/rars/tracks/pocono.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/ra.trk /usr/share/rars/tracks/ra.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/ramdu.trk /usr/share/rars/tracks/ramdu.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/rars.trk /usr/share/rars/tracks/rars.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/s1.trk /usr/share/rars/tracks/s1.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/silver97.trk /usr/share/rars/tracks/silver97.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/wierd.trk /usr/share/rars/tracks/wierd.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/watglen.trk /usr/share/rars/tracks/watglen.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/v03.trk /usr/share/rars/tracks/v03.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/v02.trk /usr/share/rars/tracks/v02.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/s2.trk /usr/share/rars/tracks/s2.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/v01.trk /usr/share/rars/tracks/v01.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/trouble.trk /usr/share/rars/tracks/trouble.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/tremblnt.trk /usr/share/rars/tracks/tremblnt.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/sepang.trk /usr/share/rars/tracks/sepang.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/season /usr/share/rars/tracks/season
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/silverst.trk /usr/share/rars/tracks/silverst.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/spa.trk /usr/share/rars/tracks/spa.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/speed2.trk /usr/share/rars/tracks/speed2.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/stef2.trk /usr/share/rars/tracks/stef2.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/suzuka.trk /usr/share/rars/tracks/suzuka.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/timin.trk /usr/share/rars/tracks/timin.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/random.trk /usr/share/rars/tracks/random.trk
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/t_eight.trx /usr/share/rars/tracks/t_eight.trx
	$(mkinstalldirs) /usr/share/rars/tracks/
	$(INSTALL_DATA) $(srcdir)/t_zero.trx /usr/share/rars/tracks/t_zero.trx

uninstall-local:
	-rm -f /usr/share/rars/tracks/aalborg.trk
	-rm -f /usr/share/rars/tracks/adelaide.trk
	-rm -f /usr/share/rars/tracks/albert.trk
	-rm -f /usr/share/rars/tracks/albrtprk.trk
	-rm -f /usr/share/rars/tracks/anew.trk
	-rm -f /usr/share/rars/tracks/austria.trk
	-rm -f /usr/share/rars/tracks/barcelon.trk
	-rm -f /usr/share/rars/tracks/brands.trk
	-rm -f /usr/share/rars/tracks/brazil.trk
	-rm -f /usr/share/rars/tracks/buenos.trk
	-rm -f /usr/share/rars/tracks/clkwis.trk
	-rm -f /usr/share/rars/tracks/cstlcomb.trk
	-rm -f /usr/share/rars/tracks/doningtn.trk
	-rm -f /usr/share/rars/tracks/zandvort.trk
	-rm -f /usr/share/rars/tracks/dreiw.trk
	-rm -f /usr/share/rars/tracks/elev2.trk
	-rm -f /usr/share/rars/tracks/estoril.trk
	-rm -f /usr/share/rars/tracks/figure8.trk
	-rm -f /usr/share/rars/tracks/fiorano.trk
	-rm -f /usr/share/rars/tracks/fourmile.trk
	-rm -f /usr/share/rars/tracks/hock.trk
	-rm -f /usr/share/rars/tracks/hungary.trk
	-rm -f /usr/share/rars/tracks/kevin.trk
	-rm -f /usr/share/rars/tracks/imola.trk
	-rm -f /usr/share/rars/tracks/indy500.trk
	-rm -f /usr/share/rars/tracks/indygp.trk
	-rm -f /usr/share/rars/tracks/jerez.trk
	-rm -f /usr/share/rars/tracks/kimla01.trk
	-rm -f /usr/share/rars/tracks/kimla02.trk
	-rm -f /usr/share/rars/tracks/kimla03.trk
	-rm -f /usr/share/rars/tracks/kimla04.trk
	-rm -f /usr/share/rars/tracks/kimla05.trk
	-rm -f /usr/share/rars/tracks/longrand.trk
	-rm -f /usr/share/rars/tracks/loudon.trk
	-rm -f /usr/share/rars/tracks/magnycrs.trk
	-rm -f /usr/share/rars/tracks/michigan.trk
	-rm -f /usr/share/rars/tracks/midohio.trk
	-rm -f /usr/share/rars/tracks/mlwaukee.trk
	-rm -f /usr/share/rars/tracks/monaco.trk
	-rm -f /usr/share/rars/tracks/montreal.trk
	-rm -f /usr/share/rars/tracks/nurnburg.trk
	-rm -f /usr/share/rars/tracks/phoenix.trk
	-rm -f /usr/share/rars/tracks/oval2.trk
	-rm -f /usr/share/rars/tracks/monza-55.trk
	-rm -f /usr/share/rars/tracks/monza-76.trk
	-rm -f /usr/share/rars/tracks/mosport.trk
	-rm -f /usr/share/rars/tracks/nazareth.trk
	-rm -f /usr/share/rars/tracks/per1.trk
	-rm -f /usr/share/rars/tracks/pocono.trk
	-rm -f /usr/share/rars/tracks/ra.trk
	-rm -f /usr/share/rars/tracks/ramdu.trk
	-rm -f /usr/share/rars/tracks/rars.trk
	-rm -f /usr/share/rars/tracks/s1.trk
	-rm -f /usr/share/rars/tracks/silver97.trk
	-rm -f /usr/share/rars/tracks/wierd.trk
	-rm -f /usr/share/rars/tracks/watglen.trk
	-rm -f /usr/share/rars/tracks/v03.trk
	-rm -f /usr/share/rars/tracks/v02.trk
	-rm -f /usr/share/rars/tracks/s2.trk
	-rm -f /usr/share/rars/tracks/v01.trk
	-rm -f /usr/share/rars/tracks/trouble.trk
	-rm -f /usr/share/rars/tracks/tremblnt.trk
	-rm -f /usr/share/rars/tracks/sepang.trk
	-rm -f /usr/share/rars/tracks/season
	-rm -f /usr/share/rars/tracks/silverst.trk
	-rm -f /usr/share/rars/tracks/spa.trk
	-rm -f /usr/share/rars/tracks/speed2.trk
	-rm -f /usr/share/rars/tracks/stef2.trk
	-rm -f /usr/share/rars/tracks/suzuka.trk
	-rm -f /usr/share/rars/tracks/timin.trk
	-rm -f /usr/share/rars/tracks/random.trk
	-rm -f /usr/share/rars/tracks/t_eight.trx
	-rm -f /usr/share/rars/tracks/t_zero.trx

####### kdevelop will overwrite this part!!! (end)############
