####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = sky.3ds 

install-data-local:
	$(mkinstalldirs) /usr/share/rars/tracks/model/
	$(INSTALL_DATA) $(srcdir)/sky.3ds /usr/share/rars/tracks/model/sky.3ds

uninstall-local:
	-rm -f /usr/share/rars/tracks/model/sky.3ds

####### kdevelop will overwrite this part!!! (end)############
