####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = barrier.bmp barrier_red_white_nmm.bmp barrier_glass_nmm.bmp concrete_nmm.bmp barrier_white.bmp barrier_red_white_tyre.bmp grass_in.bmp grass_out.bmp panoramic.bmp red_white_nmm.bmp road_nmm.bmp sand.bmp tree.bmp unknown.bmp panel_100m.bmp panel_200m.bmp panel_300m.bmp roof.bmp env_mapping.bmp sky.bmp spa_panel_start.bmp 

install-data-local:
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/barrier.bmp /usr/share/rars/tracks/texture/barrier.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/barrier_red_white_nmm.bmp /usr/share/rars/tracks/texture/barrier_red_white_nmm.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/barrier_glass_nmm.bmp /usr/share/rars/tracks/texture/barrier_glass_nmm.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/concrete_nmm.bmp /usr/share/rars/tracks/texture/concrete_nmm.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/barrier_white.bmp /usr/share/rars/tracks/texture/barrier_white.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/barrier_red_white_tyre.bmp /usr/share/rars/tracks/texture/barrier_red_white_tyre.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/grass_in.bmp /usr/share/rars/tracks/texture/grass_in.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/grass_out.bmp /usr/share/rars/tracks/texture/grass_out.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/panoramic.bmp /usr/share/rars/tracks/texture/panoramic.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/red_white_nmm.bmp /usr/share/rars/tracks/texture/red_white_nmm.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/road_nmm.bmp /usr/share/rars/tracks/texture/road_nmm.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/sand.bmp /usr/share/rars/tracks/texture/sand.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/tree.bmp /usr/share/rars/tracks/texture/tree.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/unknown.bmp /usr/share/rars/tracks/texture/unknown.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/panel_100m.bmp /usr/share/rars/tracks/texture/panel_100m.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/panel_200m.bmp /usr/share/rars/tracks/texture/panel_200m.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/panel_300m.bmp /usr/share/rars/tracks/texture/panel_300m.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/roof.bmp /usr/share/rars/tracks/texture/roof.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/env_mapping.bmp /usr/share/rars/tracks/texture/env_mapping.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/sky.bmp /usr/share/rars/tracks/texture/sky.bmp
	$(mkinstalldirs) /usr/share/rars/tracks/texture/
	$(INSTALL_DATA) $(srcdir)/spa_panel_start.bmp /usr/share/rars/tracks/texture/spa_panel_start.bmp

uninstall-local:
	-rm -f /usr/share/rars/tracks/texture/barrier.bmp
	-rm -f /usr/share/rars/tracks/texture/barrier_red_white_nmm.bmp
	-rm -f /usr/share/rars/tracks/texture/barrier_glass_nmm.bmp
	-rm -f /usr/share/rars/tracks/texture/concrete_nmm.bmp
	-rm -f /usr/share/rars/tracks/texture/barrier_white.bmp
	-rm -f /usr/share/rars/tracks/texture/barrier_red_white_tyre.bmp
	-rm -f /usr/share/rars/tracks/texture/grass_in.bmp
	-rm -f /usr/share/rars/tracks/texture/grass_out.bmp
	-rm -f /usr/share/rars/tracks/texture/panoramic.bmp
	-rm -f /usr/share/rars/tracks/texture/red_white_nmm.bmp
	-rm -f /usr/share/rars/tracks/texture/road_nmm.bmp
	-rm -f /usr/share/rars/tracks/texture/sand.bmp
	-rm -f /usr/share/rars/tracks/texture/tree.bmp
	-rm -f /usr/share/rars/tracks/texture/unknown.bmp
	-rm -f /usr/share/rars/tracks/texture/panel_100m.bmp
	-rm -f /usr/share/rars/tracks/texture/panel_200m.bmp
	-rm -f /usr/share/rars/tracks/texture/panel_300m.bmp
	-rm -f /usr/share/rars/tracks/texture/roof.bmp
	-rm -f /usr/share/rars/tracks/texture/env_mapping.bmp
	-rm -f /usr/share/rars/tracks/texture/sky.bmp
	-rm -f /usr/share/rars/tracks/texture/spa_panel_start.bmp

####### kdevelop will overwrite this part!!! (end)############
